[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "rtic developers"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interrupt bindings for the LM3S6965 microcontroller"
documentation = "https://docs.rs/lm3s6965"
edition = "2021"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "lm3s6965"
repository = "https://github.com/japaric/lm3s6965"
version = "0.1.3"


[dependencies.cortex-m-rt]
version = "0.7.1"
features = ["device"]

[dependencies.cortex-m]
version = "0.7.4"
